--- a/Kurczaki/Kurczaki.vcxproj.filters
+++ b/Kurczaki/Kurczaki.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Egg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bullet_v2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Egg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet_v2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
