--- a/Kurczaki/Kurczaki.vcxproj
+++ b/Kurczaki/Kurczaki.vcxproj
@@ -150,20 +150,22 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MoveBody.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PowerUp.cpp" />
-    <ClCompile Include="Window.cpp" />
+    <ClCompile Include="WindowHendler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Egg.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="MoveBody.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PowerUp.h" />
-    <ClInclude Include="Window.h" />
+    <ClInclude Include="WindowHendler.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
